feat(challenge): 주간캘린더 날짜별 인증 기록 추가